--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.2.0",
+    "amqplib": "^0.10.8",
     "archiver": "^7.0.1",
     "dotenv": "^17.0.0",
     "fluent-ffmpeg": "^2.1.3",
@@ -44,6 +45,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/amqplib": "^0.10.7",
     "@types/archiver": "^6.0.3",
     "@types/express": "^5.0.0",
     "@types/fluent-ffmpeg": "^2.1.27",
