--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "archiver": "^7.0.1",
     "dotenv": "^17.0.0",
     "fluent-ffmpeg": "^2.1.3",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
@@ -50,6 +51,7 @@
     "@types/express": "^5.0.0",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^1.4.13",
     "@types/node": "^22.10.7",
     "@types/pg": "^8.15.4",
