--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^11.2.0",
     "amqplib": "^0.10.8",
     "archiver": "^7.0.1",
+    "aws-jwt-verify": "^5.1.0",
     "dotenv": "^17.0.0",
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
