add: email-provider gateway

--- a/env.example
+++ b/env.example
@@ -13,4 +13,11 @@ AWS_REGION=us-east-1
 AWS_S3_BUCKET_NAME=fiap-hackaton-v
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret_key 
+JWT_SECRET=your_jwt_secret_key
+
+# Gmail Configuration
+GMAIL_USER=seu_email@gmail.com
+GMAIL_APP_PASSWORD=sua_senha_de_app_do_gmail
+
+# Auth Service Configuration
+AUTH_SERVICE_URL=http://localhost:8080 
