--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.2.0",
+    "@types/nodemailer": "^6.4.17",
     "amqplib": "^0.10.8",
     "archiver": "^7.0.1",
     "aws-jwt-verify": "^5.1.0",
+    "axios": "^1.10.0",
     "dotenv": "^17.0.0",
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.4",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
