chore: update env.example

--- a/env.example
+++ b/env.example
@@ -1,23 +1,25 @@
 # Database Configuration
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=postgres123
-DB_NAME=video_processor
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_NAME=
 
 # RabbitMQ Configuration
-RABBITMQ_URL=amqp://admin:admin123@localhost:5672
+RABBITMQ_URL=
+RABBITMQ_QUEUE=
 
-# AWS S3 Configuration
-AWS_REGION=us-east-1
-AWS_S3_BUCKET_NAME=fiap-hackaton-v
+# Application Configuration
+NODE_ENV=
+PORT=
+RABBITMQ_URL=
+RABBITMQ_QUEUE=
 
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_key
+# AWS
+AWS_COGNITO_CLIENT_ID=
+AWS_COGNITO_USER_POOL_ID=
+AWS_REGION=
+AWS_S3_BUCKET_NAME=
 
-# Gmail Configuration
-GMAIL_USER=seu_email@gmail.com
-GMAIL_APP_PASSWORD=sua_senha_de_app_do_gmail
-
-# Auth Service Configuration
-AUTH_SERVICE_URL=http://localhost:8080 
+GMAIL_USER=
+GMAIL_APP_PASSWORD=
