--- a/.gitignore
+++ b/.gitignore
@@ -38,12 +38,10 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# dotenv environment variable files
+# Environment files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
 .env.local
+.env.production
 
 # temp directory
 .temp
