--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,10 +40,27 @@ services:
       timeout: 30s
       retries: 3
 
+  redis:
+    image: redis:7.2-alpine
+    container_name: video_processor_redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: ["redis-server", "--appendonly", "yes"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
   postgres_data:
     driver: local
   rabbitmq_data:
+    driver: local
+  redis_data:
     driver: local
 
 networks:
