--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.10.0",
     "dotenv": "^17.0.0",
     "fluent-ffmpeg": "^2.1.3",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "node-fetch": "^3.3.2",
