--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.4",
     "pg": "^8.16.3",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "uuid": "^11.1.0"
